# Predictive-Maintenance

./: .gitignore  LICENCE  Makefile  README.md  pyproject.toml  requirements.txt  requiremets.txt  ruff.toml
.github/: AUTHORS.md  CODEOWNERS  CONTRIBUTORS.md  pull_request_template.md
.github/workflows/: checks.yml
src/: main.py
src/loading/: loading.py
src/modules/: data_preparation.py  loading.py  models.py
