[project]
name = "predictive-maintenance"
version = "1.3.10"
description = ""
authors = [{name = "Jeremy Vachier"}]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "scikit-learn>=1.5.0",
    "tensorflow-io-gcs-filesystem<0.35.0",
    "tensorflow-macos>=2.15.0",
    "datetime>=5.4",
    "statsmodels>=0.14.1",
    "pylint>=3.0.3",
    "scikit-optimize>=0.9.0",
    "black>=24.3.0",
    "ruff>=0.2.1",
    "pyarrow>=15.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
