[project]
name = "predictive-maintenance"
version = "1.3.10"
description = "Predictive maintenance system using machine learning"
authors = [{name = "Jeremy Vachier"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "scikit-learn>=1.5.0",
    "keras>=3.13.2",
    "tensorflow-io-gcs-filesystem>=0.31.0",
    "tensorflow-macos>=2.16.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "tensorflow>=2.16.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "statsmodels>=0.14.1",
    "scikit-optimize>=0.9.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "ruff>=0.2.1",
    "pylint>=3.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
